--- a/TestGuru/app/assets/stylesheets/application.css
+++ b/TestGuru/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+
+.footer {
+  position: fixed;
+  padding: 10px 10px 10px 10px;
+  bottom: 0;
+  background-color: #6d6d6d;
+  width: 98%;
+}
