--- a/TestGuru/app/views/questions/index.html.erb
+++ b/TestGuru/app/views/questions/index.html.erb
@@ -1,27 +1,15 @@
-<h1>LIST OF QUESTION for test <%= @test.title %> </h1>
+<h1>LIST OF QUESTIONS for test <%= @test.title %> </h1>
 
 <table>
-  <thead>
-    <tr>
-      <th>№</th>
-      <th>Id</th>
-      <th>Body</th>
-      <th colspan="4"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @questions.each_with_index do |question,ind| %>
-      <tr>
-        <td><%= ind+1 %>
-        <td><%= question.id %></td>
-        <td><%= question.body %></td>
-        <td><%= link_to :show, question_path(question.id) %></td>
-        <td><%= link_to :destroy, question, data: { method: :delete, confirm: "Are you sure?" } %></td>
-      </tr>
-    <% end %>
-        <tr>
-          <td><%= link_to :new, new_test_question_path(@test.id)%>
-        </tr>
-  </tbody>
+  <tr>
+    <th>Id</th>
+    <th>Body</th>
+    <th colspan="3"></th>
+  </tr>
+  <%= render @questions %>
 </table>
+
+<p>
+  <%= link_to :new_question, new_test_question_path(@test.id)%>
+  <%= link_to 'Back', @test%>
+</p>
