--- a/TestGuru/app/views/shared/_footer.html.erb
+++ b/TestGuru/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
   <strong>
     <%= current_year() %>
     shilin-anton
-    <a href=<%= github_url('shilin-anton','Thinknetica_Black_Jack') %>>TestGuru</a>
+    <a><%= github_url('shilin-anton','Thinknetica_Black_Jack') %></a>
   </strong>
   My Rails-basics project
   <a href='https://thinknetica.com/'>Учебный проект в онлайн-школе Thinknetica</a>
